# Netology_DZ_PY_Asyncio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Docs/: 2.2-asyncio-README.md
src/Tests/: __init__.py  test_migrate_db.py
src/swapi_asyncio/: __init__.py  config.py  db_schema.py  load_from_swapi.py  loader.py  logging_config.py  migrate_db.py  swapi_client.py
