[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netology-swapi-asyncio"
version = "0.1.2"
description = "Асинхронная выгрузка персонажей Star Wars из SWAPI в SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0,<4",
    "aiosqlite>=0.19.0,<1",
    "python-dotenv>=1.0.0,<2",
    "certifi>=2024.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["swapi_asyncio*"]
